# django-easyfilters

./: AUTHORS  CHANGES.rst  MANIFEST.in  README.rst  TODO  pyproject.toml  pytest.ini  tox.ini
django_easyfilters/: filters.py  filterset.py  queries.py
src/django_easyfilters/: filterset.py  utils.py
tests/test_app/: models.py
tests/test_project/: settings.py
