[tool.poetry]
name = "django-easyfilters"
version = "0.8.0"
description = "Easy creation of link-based filtering for a list of Django model objects.",

license = "MIT License"
readme = "README.rst"
homepage = "https://github.com/srepmub/django-easyfilters"
repository = "https://github.com/srepmub/django-easyfilters"
documentation = "https://shedskin.readthedocs.io"

authors = [
    "Luke Plant <http://lukeplant.me.uk>",
    "Daniele Procida <https://github.com/evildmp>",
    "Ionel Cristian Mărieș <http://blog.ionelmc.ro>",
    "Eugene A Brin <https://github.com/eubrin>",
    "Mark Dufour <https://github.com/srepmub>",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

packages = [
    { include = "django-easyfilters" },
]

include = [
    { path = "django_easyfilters/*.py", format = ["sdist", "wheel"] },
    { path = "django_easyfilters/templates/django_easyfilters/default.html", format = ["sdist", "wheel"] },
    { path = "AUTHORS", format = ["sdist"] },
    { path = "CHANGES.rst", format = ["sdist"] },
    { path = "LICENSE", format = ["sdist"] },
    { path = "pyproject.toml", format = ["sdist"] },
    { path = "docs/*.rst", format = ["sdist"] },
    { path = "setup.py", format = ["sdist"] },
    { path = "tox.ini", format = ["sdist"] },
    { path = "tests", format = ["sdist"] },
]

[tool.poetry.dependencies]
python = "^3.8"
conan = "1.62.0"





[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/srepmub/django-easyfilters/issues"
